# GameProject

./: CMakeCache.txt  GameProject2  Makefile  README.md  Test  cmake_install.cmake  makefile  run.sh  save.json  todo.txt
Layouts/: 0.json  1.json  1Enemies.json  2Enemies.json  3Enemies.json  4Enemies.json  Debug.json  Enemies.json  FirstRoom.json  Key.json  Shop.json
Relazione Uni/: (OLD)Relazione Programmazione.odt  .~lock.Relazione Programmazione.odt#  Gerarchia Dialoghi  Gerarchia classi.psd  Gerarchia entità.psd  Relazione Programmazione.docx  Relazione Programmazione.odt
Relazione Uni/Assets/: artifact
src/: CMakeCache.txt  CMakeLists.txt  GameProject2  Makefile  README  cmake_install.cmake  main.cpp  room.cpp  room.hpp  savedata.cpp  utility.cpp  utils.cpp
src/Engine/: gameobject.cpp  gameobject.hpp  main.cpp  map.cpp  map.h  map.hpp  minimap.cpp  minimap.h  minimap.hpp  player.cpp  player.h  room.cpp  room.h
src/Entities/: a.txt  artifact.cpp  artifact.hpp  bullet.cpp  crossShooter.cpp  dummy.cpp  entity.cpp  entity.hpp  foe.cpp  food.cpp  fruit.cpp  key.cpp  ladder.cpp  player.cpp  player.hpp  smartShooter.cpp  vendor.cpp  weapon.cpp  xCrossShooter.cpp  xShooter.cpp
src/Layouts/: layout1.json
src/Tools/: EntitiesList.cpp  EntitiesList.hpp  GameObjectList.cpp  GameObjectList.hpp  GameObjectNode.cpp  GameObjectNode.hpp  ShopItem.hpp  list.cpp  list.hpp  savedata.cpp  savedata.hpp  utils.cpp  utils.hpp
src/UI/: alert.hpp  dialog.cpp  dialog.hpp  inventory.cpp  inventory.hpp  itemselector.cpp  itemselector.hpp  menu.hpp  message.cpp  message.hpp  puzzle.hpp  shop.cpp  shop.hpp  stats.cpp  stats.hpp
src/headers/: room.h  savedata.h  savedata.hpp  uiwidgets.h  utility.h  utils.h  utils.hpp
test/: keycode.cpp  menu.cpp
